# vizpilot-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  MCP_README.md  README.md  publish_to_pypi.sh  pyproject.toml  requirements.txt  send_professional_samples.py  send_sample_emails.py  setup.py  setup_github_mcp.sh  setup_mcp_testing.sh  update_production_urls.sh
examples/: cursor-config.json  kiro-config.json  vscode-config.json
mcp_configs/: cursor_mcp.json  kiro_mcp.json  qoder_mcp.json
mcp_server/: __init__.py  __main__.py  auth.py  cache.py  config.py  database.py  rate_limiter.py  server.py  tools.py  watermark.py
vizpilot_mcp/: __init__.py  server.py  welcome.py
